Setting up the app basics

--- a/src/app/balance/balance.page.html
+++ b/src/app/balance/balance.page.html
@@ -1,9 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title slot="start"> Balance </ion-title>
-    <ion-button (click)="navigateProfile()" slot="end"><ion-icon name="person"></ion-icon></ion-button>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Balance"></app-header>
 
 <ion-content [fullscreen]="true">
   <div class="content-wrapper">
