--- a/src/app/add-transaction/add-transaction.page.html
+++ b/src/app/add-transaction/add-transaction.page.html
@@ -1,10 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Add transaction
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Add transaction"></app-header>
 
 <ion-content [fullscreen]="true">
   <div class="transaction">
