--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,9 @@
 ion-button {
-    --background: gray;
+    --background: transparent;
+    --color: grey;
     margin-right: 20px;
+
+    ion-icon {
+        font-size: 2rem;
+    }
 }
