--- a/src/app/add-transaction/add-transaction.page.html
+++ b/src/app/add-transaction/add-transaction.page.html
@@ -1,37 +1,41 @@
 <app-header title="Add transaction"></app-header>
 
 <ion-content [fullscreen]="true">
-  <div class="transaction">
-    <ion-list>
+  <form [formGroup]="transactionForm" (ngSubmit)="addTransaction()">
+    <div class="transaction">
       <ion-list>
+
         <ion-item>
-          <ion-select interface="popover" label-placement="fixed" placeholder="Transaction type">
+          <ion-select formControlName="type" interface="popover" label="Transaction type" placeholder="Select type">
             <ion-select-option value="income">Income</ion-select-option>
             <ion-select-option value="expense">Expense</ion-select-option>
           </ion-select>
         </ion-item>
 
         <ion-item>
-          <ion-input label="Transaction amount" type="number" placeholder="Enter number"></ion-input>
+          <ion-input formControlName="amount" label="Transaction amount" type="number" placeholder="Enter number"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-select interface="popover" label-placement="fixed" placeholder="Transaction category">
+          <ion-select formControlName="category" interface="popover" label="Transaction category" placeholder="Select category">
             <ion-select-option value="entertainment">Entertainment</ion-select-option>
-            <ion-select-option value="expenses">expenses</ion-select-option>
+            <ion-select-option value="expenses">Expenses</ion-select-option>
             <ion-select-option value="fun">Fun</ion-select-option>
           </ion-select>
         </ion-item>
 
         <ion-item>
-          <ion-textarea label="Note" placeholder="Enter details..."></ion-textarea>
+          <ion-textarea formControlName="note" label="Note" placeholder="Enter details..."></ion-textarea>
         </ion-item>
 
         <ion-item>
           <ion-label>Date</ion-label>
-          <ion-datetime display-format="DD MMM YYYY"></ion-datetime>
+          <ion-datetime formControlName="date" presentation="date"></ion-datetime>
         </ion-item>
+
+        <ion-button expand="block" type="submit" [disabled]="transactionForm.invalid">Submit</ion-button>
+
       </ion-list>
-    </ion-list>
-  </div>
+    </div>
+  </form>
 </ion-content>
