--- a/src/app/balance/balance.page.html
+++ b/src/app/balance/balance.page.html
@@ -4,17 +4,17 @@
   <div class="content-wrapper">
     <div class="balance">
       <div class="data">
-        <span class="amount">844.50 $</span>
+        <span class="amount">{{ balance }} $</span>
         <span class="amount-text">Available balance</span>
       </div>
-      <div class="month">Date: 21.04.2025</div>
+      <div class="month">Date: {{ currentDate }}</div>
     </div>
     <div class="balance">
       <div class="data">
-        <span class="amount">151.15 $ </span>
+        <span class="amount">{{ monthlySpendAmount }} $ </span>
         <span class="amount-text">Spent this month</span>
       </div>
-      <div class="month">Month: September</div>
+      <div class="month">Month: {{ currentMonthName }}</div>
     </div>
     <div class="chart">
       <h3>Your spending by category</h3>
