--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -1,18 +1,21 @@
 <app-header title="Transaction history"></app-header>
 
 <ion-content [fullscreen]="true">
-  @for (transaction of transactions(); track transaction) {
-    <div class="transaction" (click)="viewTransaction(transaction)">
-      <div class="data">
-        <span class="amount">{{ transaction.amount }}</span>
-        <span class="balance">Balance: 123.56$</span>
-      </div>
-      <ion-icon name="add-outline"></ion-icon>
+  @for (transaction of transactionsForView; track transaction) {
+  <div class="transaction" (click)="viewTransaction(transaction)">
+    <div class="data">
+      <span class="amount">
+        @if (transaction.type === 'expense') { - }{{ transaction.amount
+        }}</span
+      >
+      <span class="balance">Balance: {{ transaction.currentBalance }}$</span>
     </div>
+    <ion-icon name="add-outline"></ion-icon>
+  </div>
   }
   <!-- <div class="transaction">
     <div class="data">
-      <span class="amount">44.15 $</span>
+      <span class="amount"> @if (true) {-}44.15 $</span>
       <span class="balance">Balance: 123.56$</span>
     </div>
     <ion-icon name="w"></ion-icon>
@@ -38,5 +41,4 @@
     </div>
     <ion-icon name="remove-outline"></ion-icon>
   </div> -->
-
 </ion-content>
