--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -25,6 +25,10 @@
       <a href="/register">
         New here? Create an account to join us.
       </a>
+
+      <a href="/lost-password">
+        Lost password
+      </a>
     </form>
   </div>
 </ion-content>
