--- a/src/app/add-transaction/add-transaction.page.html
+++ b/src/app/add-transaction/add-transaction.page.html
@@ -1,6 +1,6 @@
 <app-header title="Add transaction"></app-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" id="transaction-content">
   <form [formGroup]="transactionForm" (ngSubmit)="addTransaction()">
     <div class="transaction">
       <ion-list>
