--- a/src/app/balance/balance.page.html
+++ b/src/app/balance/balance.page.html
@@ -1,6 +1,6 @@
 <app-header title="Balance"></app-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" id="main-content">
   <div class="content-wrapper">
     <div class="balance">
       <div class="data">
