--- a/src/app/add-transaction/add-transaction.page.scss
+++ b/src/app/add-transaction/add-transaction.page.scss
@@ -1,28 +1,34 @@
 ion-content {
-    --background: #ebeef7;
-}
+  --background: var(--ion-background-color);
 
-.transaction {
+  .transaction {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px 10px;
     margin: 20px 20px;
-    background: white;
+    background: var(--ion-background-secondary-color);
     border-radius: 10px;
-    color: black;
+    color: var(--ion-text-color);
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-}
+  }
 
-ion-item {
-    --background: #FFF !important;
+  ion-item {
+    --background: var(--ion-background-secondary-color) !important;
     border: none !important;
+  }
+
+  .list-ios {
+    background: var(--ion-background-secondary-color) !important;
+  }
+
+  .list-md {
+    background: var(--ion-background-secondary-color) !important;
+  }
 }
 
-.list-ios {
-    background: white !important; 
-}
-
-.list-md {
-    background: white !important;
+ion-datetime {
+  --background: var(--ion-background-secondary-color);
+  --color: var(--ion-text-color);
+  --placeholder-color: var(--ion-color-medium);
 }
