--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,30 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu Content</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-item class="clickable level-0" (click)="openProfile()">
+        <ion-icon class="ion-padding-end" name="person"></ion-icon>
+        <ion-label>Profile</ion-label>
+      </ion-item>
+
+      <ion-item class="clickable level-0" (click)="openSettings()">
+        <ion-icon class="ion-padding-end" name="cog-outline"></ion-icon>
+        <ion-label>Settings</ion-label>
+      </ion-item>
+
+      <ion-item class="clickable level-0" (click)="openHelp()">
+        <ion-icon
+          class="ion-padding-end"
+          name="information-circle-outline"
+        ></ion-icon>
+        <ion-label>Help</ion-label>
+      </ion-item>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
