--- a/src/app/balance/balance.page.scss
+++ b/src/app/balance/balance.page.scss
@@ -1,6 +1,6 @@
 ion-content {
-    --background: #ebeef7;
-
+    --background: var(--ion-background-color);
+    
     .content-wrapper {
         padding: 20px 20px;
         display: flex;
@@ -13,9 +13,9 @@ ion-content {
             align-items: flex-end;
             justify-content: space-between;
             padding: 20px 20px;
-            background: white;
+            background: var(--ion-background-secondary-color);
             border-radius: 10px;
-            color: black;
+            color: var(--ion-text-color);
             box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 
             ion-icon {
@@ -30,12 +30,12 @@ ion-content {
 
                 .amount-text {
                     font-size: 1rem;
-                    color: #989aa0;
+                    color: var(--ion-text-color);
                 }
 
                 .amount {
                     font-size: 2rem;
-                    color: rgba(0, 0, 0, 0.8);
+                    color: var(--ion-text-color);
                     font-weight: 500;
                 }
             }
@@ -43,13 +43,13 @@ ion-content {
             .month {
                 flex: 0;
                 align-self: baseline;
-                color: #989aa0;
+                color: var(--ion-text-color);
             }
         }
 
         .chart {
             border-radius: 10px;
-            background-color: white;
+            background-color: var(--ion-background-secondary-color);
             box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
             padding-top: 10px;
             padding-bottom: 20px;
