--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title slot="start"> {{ title }} </ion-title>
-    <ion-button (click)="logout()" slot="end"
-      ><ion-icon name="log-out-outline"></ion-icon
-    ></ion-button>
+     <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
