--- a/src/global.scss
+++ b/src/global.scss
@@ -8,7 +8,7 @@
  * For more information on global stylesheets, visit the documentation:
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
-
+@import "./theme/variables.scss";
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
 
@@ -25,6 +25,7 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+@import "@ionic/angular/css/palettes/dark.class.css";
 /**
  * Ionic Dark Mode
  * -----------------------------------------------------
@@ -34,13 +35,12 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import '@ionic/angular/css/palettes/dark.system.css';
 
 * {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
-    --ion-background-color: #ffffff !important;
-    --ion-text-color: #000000 !important;
+  --ion-background-color: #ffffff;
+  --ion-text-color: #000000;
 }
