--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -18,7 +18,7 @@
       </div>
       <div class="lost-password">
          <a href="/lost-password">
-          Lost my password
+          Change my password
         </a>
       </div>
       <div>
