--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu contentId="main-content">
     <ion-header>
       <ion-toolbar>
-        <ion-title>Menu Content</ion-title>
+        <ion-title>Main Menu</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
@@ -21,7 +21,7 @@
           class="ion-padding-end"
           name="information-circle-outline"
         ></ion-icon>
-        <ion-label>Help</ion-label>
+        <ion-label>Privacy policy</ion-label>
       </ion-item>
     </ion-content>
   </ion-menu>
