--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -22,13 +22,16 @@
         Login
       </ion-button>
 
-      <a href="/register">
-        New here? Create an account to join us.
-      </a>
-
-      <a href="/lost-password">
-        Lost password
-      </a>
+      <div class="btns">
+        <a class="ion-padding-top" href="/register">
+          New here? Create an account to join us.
+        </a>
+    
+        <a href="/lost-password">
+          Lost password
+        </a>
+      </div>
     </form>
+    
   </div>
 </ion-content>
