Resolved login.page.html merge conflict

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -22,16 +22,15 @@
         Login
       </ion-button>
 
-      <div class="btns">
-        <a class="ion-padding-top" href="/register">
+      <div class="link-wrapper">
+        <a href="/register">
           New here? Create an account to join us.
         </a>
-    
+  
         <a href="/lost-password">
           Lost password
         </a>
       </div>
     </form>
-    
   </div>
 </ion-content>
