--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -53,6 +53,12 @@
         margin-bottom: 0rem;
       }
     }
+
+    .link-wrapper {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
   }
 }
 
